--- a/src/app/shared/components/kpi-model-tickets-priority-per-version/kpi-model-tickets-priority-per-version.component.html
+++ b/src/app/shared/components/kpi-model-tickets-priority-per-version/kpi-model-tickets-priority-per-version.component.html
@@ -30,6 +30,7 @@
             <th> date création</th>
             <th> produit</th>
             <th> référence </th>
+            <th> module </th>
             <th> Epic </th>
             <th> Version </th>
             <th> n°: sprint</th>
@@ -41,6 +42,7 @@
             <td>{{TicketsPriority.date_creation}}</td>
             <td>{{TicketsPriority.nom_produit}}</td>
             <td>{{TicketsPriority.nom_ticket}}</td>
+            <td>{{TicketsPriority.nom_module}}</td>
             <td>{{TicketsPriority.nom_epic}}</td>
             <td>{{TicketsPriority.nom_version}}</td>
             <td>{{TicketsPriority.numero_sprint}}</td>
