--- a/src/app/shared/components/kpi-model-time-resolution-ticket/kpi-model-time-resolution-ticket.component.html
+++ b/src/app/shared/components/kpi-model-time-resolution-ticket/kpi-model-time-resolution-ticket.component.html
@@ -29,10 +29,11 @@
             <th> collaborateur</th>
             <th> epic</th>
             <th> version</th>
+            <th> module</th>
             <th> n°: sprint</th>
             <th> référence</th>
             <th> log</th>
-            <th> temps de resolution</th>
+            <th> temps</th>
             <th> date creation </th>
             <th> complexite </th>
         </tr>
@@ -42,6 +43,7 @@
             <td>{{Ticket.first_name}}</td>
             <td>{{Ticket.nom_epic}}</td>
             <td>{{Ticket.nom_version}}</td>
+            <td>{{Ticket.nom_module}}</td>
             <td>{{Ticket.numero_sprint}}</td>
             <td>{{Ticket.nom_ticket}}</td>
             <td>{{Ticket.nom_log}}</td>
