--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -8,7 +8,9 @@
     </div>
 <h2 matSubheader>Rapports</h2>
 
-<a mat-list-item routerLinkActive="List-item-active" routerLink="/Kpis">Mes templates </a>
+<a mat-list-item routerLinkActive="List-item-active" routerLink="/Kpis">Mes Rapports </a>
+<a mat-list-item routerLinkActive="List-item-active" routerLink="/CreateDashboard">Creer Dashboard  </a>
+<a mat-list-item routerLinkActive="List-item-active" routerLink="/Dashboards">Mes Dashboards </a>
 
  
   <mat-divider></mat-divider>
