--- a/src/app/shared/components/dashboard-creator/dashboard-creator.component.html
+++ b/src/app/shared/components/dashboard-creator/dashboard-creator.component.html
@@ -1,1 +1,18 @@
-<p>dashboard-creator works!</p>
+
+<h1 align="center">Créer un dashboard</h1>
+<br><br><br><br><br>
+<h2>Saisir le nom du Dashboard </h2>
+<form class="example-form">
+    <mat-form-field class="example-full-width">
+      <mat-label>Nom du dashboard</mat-label>
+      <input matInput>
+    </mat-form-field>
+    
+    <br><br><br><br><br>
+
+<div align='center'>
+    <button  mat-raised-button  style="color:black" style="background-color:#0ed3b8">Créer le dashboard</button>
+</div>
+    
+
+    
