--- a/src/app/shared/components/kpi-displayer/kpi-displayer.component.html
+++ b/src/app/shared/components/kpi-displayer/kpi-displayer.component.html
@@ -14,7 +14,7 @@
             <td>{{kpi.name}}</td>
             
             <td>
-                <a href="{{kpi.linkKpi}}"><button  class="btn btn-info" >Consulter</button></a>
+                <a href="{{kpi.linkKpi}}"><button style="background-color:#0ed3b8" class="btn btn-info" >Consulter</button></a>
             </td>
           </tr>
         </tbody>
