--- a/src/app/shared/components/config-closed-tickets/config-closed-tickets.component.scss
+++ b/src/app/shared/components/config-closed-tickets/config-closed-tickets.component.scss
@@ -10,4 +10,17 @@
     align: center;
   }
   
- 
+  ::ng-deep .mat-focused .mat-form-field-label {
+    /*change color of label*/
+    color:#0ed3b8 !important;
+   }
+  
+   ::ng-deep.mat-form-field-underline {
+    /*change color of underline*/
+    background-color:#0ed3b8 !important;
+  } 
+  
+  ::ng-deep.mat-form-field-ripple {
+   /*change color of underline when focused*/
+   background-color:#0ed3b8 !important;;
+  }
