--- a/src/app/shared/components/dashboard-creator/dashboard-creator.component.scss
+++ b/src/app/shared/components/dashboard-creator/dashboard-creator.component.scss
@@ -1,3 +1,18 @@
 button{
     width : 50%;
 }
+
+::ng-deep .mat-focused .mat-form-field-label {
+    /*change color of label*/
+    color:#0ed3b8 !important;
+   }
+  
+   ::ng-deep.mat-form-field-underline {
+    /*change color of underline*/
+    background-color:#0ed3b8 !important;
+  } 
+  
+  ::ng-deep.mat-form-field-ripple {
+   /*change color of underline when focused*/
+   background-color:#0ed3b8 !important;;
+  }
