--- a/src/app/shared/components/dashboard-displayer/dashboard-displayer.component.html
+++ b/src/app/shared/components/dashboard-displayer/dashboard-displayer.component.html
@@ -14,7 +14,7 @@
             <td>{{dashboard.nom_dashboard}}</td>
             
             <td align="right">
-              <button style="background-color:#0ed3b8" class="btn btn-info" >Consulter</button>
+              <button (click)="deleteDashboard(dashboard.id)" style="background-color:#0ed3b8" class="btn btn-info" >Consulter</button>
               &nbsp;
               &nbsp;&nbsp;
               <button  (click)="deleteDashboard(dashboard.id)" class="btn btn-warn">Supprimer</button>
