--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -6,24 +6,12 @@
        
 
     </div>
-<h2 matSubheader>Rapports</h2>
+<h2 matSubheader>Outils</h2>
 
-<a mat-list-item routerLinkActive="List-item-active" routerLink="/Kpis">Mes Rapports </a>
 <a mat-list-item routerLinkActive="List-item-active" routerLink="/CreateDashboard">Creer Dashboard  </a>
 <a mat-list-item routerLinkActive="List-item-active" routerLink="/Dashboards">Mes Dashboards </a>
 
  
   <mat-divider></mat-divider>
-
-      <h2 matSubheader>outils</h2>
-
-      <a mat-list-item routerLinkActive="List-item-active" routerLink="/contacts">
-        <mat-icon>import_contacts</mat-icon>
-        Contacts
-      </a>
-      <a mat-list-item routerLinkActive="List-item-active" routerLink="/articles">
-        <mat-icon>contact_phone</mat-icon>
-        Leads
-      </a>
 
 </mat-nav-list>
