--- a/src/app/shared/components/kpi-displayer/kpi-displayer.component.html
+++ b/src/app/shared/components/kpi-displayer/kpi-displayer.component.html
@@ -4,7 +4,7 @@
 <div class="panel">
 
     <div>
-      <h2 align="center">Vos Kpi's</h2>
+      <h2 align="center">{{dashboard.nom_dashboard}}</h2>
     </div>
     <div class="panel-body">
       <table class="table table-striped">
